# hipsql

./: .gitignore  README.md  cabal.project  defaults.dhall  gen-cabal-files.sh  stack.yaml
.github/workflows/: build.yml
hipsql/: CHANGELOG.md  hipsql.cabal  package.yaml
hipsql-api/: CHANGELOG.md  hipsql-api.cabal  package.dhall  package.yaml
hipsql-client/: CHANGELOG.md  hipsql-client.cabal  package.dhall  package.yaml
hipsql-client/exe/: Main.hs
hipsql-monad/: CHANGELOG.md  hipsql-monad.cabal  package.dhall  package.yaml
hipsql-server/: CHANGELOG.md  hipsql-server.cabal  package.dhall  package.yaml
hipsql-server/exe/: Main.hs
hipsql-test/: hipsql-test.cabal  package.yaml
hipsql-test/test-suite/: Spec.hs
hipsql-test/test-suite/Spec/: Infra.hs
hipsql-tx-simple/: CHANGELOG.md  hipsql-tx-simple.cabal
hipsql/exe/: Main.hs
hipsql/test-suite/: Spec.hs
hipsql/test-suite/Spec/: Infra.hs
