cabal-version: 1.12

name:           hipsql-api
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/simspace/hipsql#readme>
homepage:       https://github.com/simspace/hipsql#readme
bug-reports:    https://github.com/simspace/hipsql/issues
author:         Cary Robbins
maintainer:     carymrobbins@gmail.com
copyright:      2021 SimSpace
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/simspace/hipsql

library
  exposed-modules:
      Hipsql.API
      Hipsql.API.Internal
  other-modules:
      Paths_hipsql_api
  hs-source-dirs:
      library
  ghc-options: -Wall
  build-depends:
      aeson >=1.4.7.1 && <3
    , base >=4.7 && <5
    , bytestring >=0.10.10.0 && <0.12
    , servant >=0.16 && <0.20
  default-language: Haskell2010
