cabal-version: 1.12

name:           hipsql-monad
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/simspace/hipsql#readme>
homepage:       https://github.com/simspace/hipsql#readme
bug-reports:    https://github.com/simspace/hipsql/issues
author:         Cary Robbins
maintainer:     carymrobbins@gmail.com
copyright:      2021 SimSpace
license:        BSD3
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/simspace/hipsql

library
  exposed-modules:
      Hipsql.Monad
  other-modules:
      Paths_hipsql_monad
  hs-source-dirs:
      library
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , postgresql-libpq >=0.9.4.2 && <0.10
  default-language: Haskell2010
